# check_ComputeCapability

./: .gitignore  CMakeLists.txt  README.md  run-vs2015.bat
